# discord-embed-links

./: Cargo.toml  Dockerfile  example.env
src/: config.rs  handler.rs  main.rs  route.rs
templates/: base.html  embed.html  error_404.html  home.html
