[package]
name = "discord-embed-links"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
askama = "0.12.1"
axum = { version = "0.7.7", features = ["tokio"] }
dotenv = "0.15.0"
rustls = "0.23.15"
serde = { version = "^1.0.210", features = ["derive"] }
serde_cbor = { version = "0.12.0-dev", package = "serde_cbor_2" }
serde_json = "^1.0.128"
sqlx = { version = "0.8.2", features = ["sqlite", "sqlx-sqlite", "runtime-tokio"] }

tokio = { version = "^1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = "^0.7.12"

futures = "^0.3.30"
futures-concurrency = "^3.1.0"
futures-util = { version = "^0.3.30", features = ["sink"] }

tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.12.9", features = ["rustls-tls-native-roots"] }